<resources>
    <string name="app_name">ForgetTheAlzheimerApp</string>
    <string name="Creare_cont">Creare cont</string>
    <string name="Nume_complet">Nume complet</string>
    <string name="Adresa">Adresa</string>
    <string name="Telefon">Telefon</string>
    <string name="Nume_supraveghetor">Nume supraveghetor</string>
    <string name="Telefon_supraveghetor">Telefon supraveghetor</string>
    <string name="Adresa_mail">Adresa mail</string>
    <string name="Parola">Parola</string>
    <string name="Confirmare_parola">Confirmare parola</string>
    <string name="Cod_doctor">Cod doctor</string>
    <string name="Aveti_cont">Aveți deja un cont?\nAutentificare</string>
    <string name="inregistrare">Înregistrare</string>
    <string name="bPacient">Pacient</string>
    <string name="bDoctor">Doctor</string>
    <string name="autentificare">Autentificare</string>
    <string name="Nu_aveti_cont">Nu aveți încă un cont?\nCreați unul</string>
    <string name="Mail_doctor">Adresa mail doctor</string>
    <string name="editeaza">Editează</string>
    <string name="medicamentatie">Medicamentatie</string>
    <string name="adaugaremedicament">Adaugare medicament</string>
    <string name="numemedicament">Nume medicament</string>
    <string name="oraRef">Ora de referinta</string>
    <string name="interval">Interval</string>
    <string name="salvare">Salvare</string>
    <string name="medicatie">Medicatie</string>
    <string name="istoricul_dumneavoastr">Istoricul dumneavoastră:</string>
    <string name="apeleaz_supraveghetor">Apelează supraveghetor</string>
    <string name="apeleaza_doctor">Apelează doctor</string>
    <string name="istoricul_pacient">Istoricul pacientului</string>
</resources>