<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:duration="20"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.alzhapp.PaginaPrincipalaPacient"
    android:background="#07040D"
    android:paddingTop="0dp"
    >
    <LinearLayout

        android:id="@+id/istoriculdv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        >
    <TextView

        android:layout_marginTop="15dp"

        style="@style/texte"
        android:paddingTop="20dp"
        android:text="@string/istoricul_dumneavoastr" />
    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_above="@+id/but"
    android:layout_below="@+id/istoriculdv"
    android:layout_marginBottom="15dp">
    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/istoriculdv">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/myBoxIstoric"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </ScrollView>
</LinearLayout>
    <LinearLayout
        android:id="@+id/but"
        android:layout_marginBottom="15dp"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:id="@+id/apeleaza_supraveghetor"
            style="@style/mybutton2"
            android:text="@string/apeleaz_supraveghetor"
            android:drawableLeft="@drawable/ic_phone"/>
        <Button
            android:id="@+id/apeleaza_doctor"
            style="@style/mybutton2"
            android:text="@string/apeleaza_doctor"
            android:drawableLeft="@drawable/ic_phone"/>

    </LinearLayout>
</RelativeLayout>